--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "jquery": "^3.4.1",
     "json-loader": "^0.5.7",
     "react": "next",
-    "react-bootstrap": "^1.0.0-beta.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "next",
-    "react-scripts": "1.1.5"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,7 +22,8 @@
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "ajv": "^6.10.2",
     "gh-pages": "^2.0.1",
-    "react-alice-carousel": "^1.13.3"
+    "react-alice-carousel": "^1.15.2"
   }
 }
